our doctor section done with media query

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
 
         <div class="row g-4">
-          <div class="col-md-3">
+          <div class="col-md-6 col-lg-3">
             <div class="impression-card">
               <p><img src="/assets/img/icon/icon-1.png" alt="" /></p>
 
@@ -124,7 +124,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6 col-lg-3">
             <div class="impression-card">
               <p><img src="/assets/img/icon/icon-2.png" alt="" /></p>
 
@@ -139,7 +139,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6 col-lg-3">
             <div class="impression-card" style="background-color: #fc724d">
               <p><img src="/assets/img/icon/icon-3.png" alt="" /></p>
 
@@ -147,13 +147,14 @@
               <div class="impression-hr">
                 <hr style="border: 1px solid white" />
               </div>
-
-              <p style="max-width: 150px; color: #ffffff">
-                The gradual information about atomic behaviour...
-              </p>
+              <div class="orange-impression-card">
+                <p style="color: #ffffff">
+                  The gradual information about atomic behaviour...
+                </p>
+              </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6 col-lg-3">
             <div class="impression-card">
               <p><img src="/assets/img/icon/icon4.png" alt="" /></p>
 
@@ -166,6 +167,33 @@
                 accumulation of <br />
                 information about
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container" style="padding-bottom: 100px">
+      <div class="row our-doctors g-5">
+        <div class="col-md-6">
+          <div style="width: 400px">
+            <hr style="border: 3px solid red; width: 80px" />
+            <h2>Our Doctors Specialize in you</h2>
+            <p>
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanics
+            </p>
+            <a href="#"
+              >Learn more <i class="fas fa-angle-right" style="height: 16px"></i
+            ></a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="our-doctors-img">
+            <div class="our-doctors-btn">
+              <button class="btn doctors-btn">
+                <i class="fas fa-play"></i>
+              </button>
             </div>
           </div>
         </div>
