--- a/index.html
+++ b/index.html
@@ -200,6 +200,32 @@
       </div>
     </section>
 
+    <section
+      class="container leading-medicine"
+      style="margin-top: 100px; margin-bottom: 100px"
+    >
+      <div class="row">
+        <div class="col-md-6">
+          <div class="leading-medicine-img">
+            <img src="/assets/img/thumb-concept-2.svg" alt="" />
+          </div>
+        </div>
+        <div class="col-md-6 p-5">
+          <div style="width: 400px">
+            <hr style="border: 3px solid red; width: 80px" />
+            <h2>Leading Medicine</h2>
+            <p>
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanics
+            </p>
+            <a href="#"
+              >Learn more <i class="fas fa-angle-right" style="height: 16px"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
