--- a/index.html
+++ b/index.html
@@ -226,6 +226,67 @@
       </div>
     </section>
 
+    <section
+      class="container our-products"
+      style="margin-top: 100px; margin-bottom: 100px"
+    >
+      <div class="row">
+        <div class="col-md-6">
+          <div>
+            <h6>Courses</h6>
+            <h2>Our Products</h2>
+            <p>
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6"></div>
+      </div>
+      <div class="our-products-card" style="margin-top: 100px">
+        <div class="col-lg-3 col-md-6">
+          <div class="products-card-img">
+            <div class="p-4">
+              <button class="btn products-card-btn">Sale</button>
+            </div>
+
+            <div class="products-card-icon">
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-cart-arrow-down"></i>
+              <i class="fas fa-eye"></i>
+            </div>
+          </div>
+
+          <div class="mt-5 our-products-card-content">
+            <a href="#">Best dental surgeons</a>
+            <div class="my-1"><h6>sit amet nulla facilisi morbi</h6></div>
+            <div style="height: 60px; width: 200px">
+              <p class="p-0 m-0">We focus on ergonomics and meeting you....</p>
+            </div>
+
+            <h5
+              style="
+                font-size: 14px;
+                line-height: 20px;
+                letter-spacing: 0.2px;
+                color: #737373;
+              "
+            >
+              <i class="fas fa-arrow-down p-0"></i> 15 Sales
+            </h5>
+            <div class="d-flex">
+              <p class="mx-2">$16.48</p>
+              <p style="color: blue">$6.48</p>
+            </div>
+            <button class="btn our-products-card-content-btn">
+              Learn More
+              <i class="fas fa-angle-right" style="padding-left: 3px"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
