our product section done without media quary

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
         </div>
         <div class="col-md-6"></div>
       </div>
-      <div class="our-products-card" style="margin-top: 100px">
-        <div class="col-lg-3 col-md-6">
-          <div class="products-card-img">
+      <div class="row g-3 our-products-card" style="margin-top: 100px">
+        <div class="col-lg-3 col-md-6 p-3">
+          <div class="products-card-img1">
             <div class="p-4">
               <button class="btn products-card-btn">Sale</button>
             </div>
@@ -258,10 +258,21 @@
           </div>
 
           <div class="mt-5 our-products-card-content">
-            <a href="#">Best dental surgeons</a>
-            <div class="my-1"><h6>sit amet nulla facilisi morbi</h6></div>
-            <div style="height: 60px; width: 200px">
-              <p class="p-0 m-0">We focus on ergonomics and meeting you....</p>
+            <div class="d-flex">
+              <a href="#">Best dental surgeons</a>
+              <div class="ps-3">
+                <button class="btn product-card-star-btn">
+                  <i class="fas fa-star" style="color: yellow"></i>
+                  <p style="color: white">4.9</p>
+                </button>
+              </div>
+            </div>
+
+            <div class="">
+              <h6 class="m-0 p-0">sit amet nulla facilisi morbi</h6>
+            </div>
+            <div style="width: 200px">
+              <p class="">We focus on ergonomics and meeting you....</p>
             </div>
 
             <h5
@@ -272,10 +283,159 @@
                 color: #737373;
               "
             >
-              <i class="fas fa-arrow-down p-0"></i> 15 Sales
+              <i class="fas fa-arrow-down me-2"></i> 15 Sales
             </h5>
             <div class="d-flex">
-              <p class="mx-2">$16.48</p>
+              <p class="me-2">$16.48</p>
+              <p style="color: blue">$6.48</p>
+            </div>
+            <button class="btn our-products-card-content-btn">
+              Learn More
+              <i class="fas fa-angle-right" style="padding-left: 3px"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 p-3">
+          <div class="products-card-img2">
+            <div class="p-4">
+              <button class="btn products-card-btn">Sale</button>
+            </div>
+
+            <div class="products-card-icon">
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-cart-arrow-down"></i>
+              <i class="fas fa-eye"></i>
+            </div>
+          </div>
+
+          <div class="mt-5 our-products-card-content">
+            <div class="d-flex">
+              <a href="#">online Appointment</a>
+              <div class="ps-3">
+                <button class="btn product-card-star-btn">
+                  <i class="fas fa-star" style="color: yellow"></i>
+                  <p style="color: white">4.9</p>
+                </button>
+              </div>
+            </div>
+            <div class=""><h6 class="m-0 p-0">bibendum arcu vitaei</h6></div>
+            <div style="width: 200px">
+              <p class="">We focus on ergonomics and meeting you....</p>
+            </div>
+
+            <h5
+              style="
+                font-size: 14px;
+                line-height: 20px;
+                letter-spacing: 0.2px;
+                color: #737373;
+              "
+            >
+              <i class="fas fa-arrow-down me-2"></i> 15 Sales
+            </h5>
+            <div class="d-flex">
+              <p class="me-2">$16.48</p>
+              <p style="color: blue">$6.48</p>
+            </div>
+            <button class="btn our-products-card-content-btn">
+              Learn More
+              <i class="fas fa-angle-right" style="padding-left: 3px"></i>
+            </button>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 p-3">
+          <div class="products-card-img3">
+            <div class="p-4">
+              <button class="btn products-card-btn">Sale</button>
+            </div>
+
+            <div class="products-card-icon">
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-cart-arrow-down"></i>
+              <i class="fas fa-eye"></i>
+            </div>
+          </div>
+
+          <div class="mt-5 our-products-card-content">
+            <div class="d-flex">
+              <a href="#">Health Quaries</a>
+              <div class="ps-3">
+                <button class="btn product-card-star-btn">
+                  <i class="fas fa-star" style="color: yellow"></i>
+                  <p style="color: white">4.9</p>
+                </button>
+              </div>
+            </div>
+            <div class="">
+              <h6 class="m-0 p-0">magna fringilla urna porttitor</h6>
+            </div>
+            <div style="width: 200px">
+              <p class="">We focus on ergonomics and meeting you....</p>
+            </div>
+
+            <h5
+              style="
+                font-size: 14px;
+                line-height: 20px;
+                letter-spacing: 0.2px;
+                color: #737373;
+              "
+            >
+              <i class="fas fa-arrow-down me-2"></i> 15 Sales
+            </h5>
+            <div class="d-flex">
+              <p class="me-2">$16.48</p>
+              <p style="color: blue">$6.48</p>
+            </div>
+            <button class="btn our-products-card-content-btn">
+              Learn More
+              <i class="fas fa-angle-right" style="padding-left: 3px"></i>
+            </button>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 p-3">
+          <div class="products-card-img4">
+            <div class="p-4">
+              <button class="btn products-card-btn">Sale</button>
+            </div>
+
+            <div class="products-card-icon">
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-cart-arrow-down"></i>
+              <i class="fas fa-eye"></i>
+            </div>
+          </div>
+
+          <div class="mt-5 our-products-card-content">
+            <div class="d-flex">
+              <a href="#">Painless Procedure</a>
+              <div class="ps-3">
+                <button class="btn product-card-star-btn">
+                  <i class="fas fa-star" style="color: yellow"></i>
+                  <p style="color: white">4.9</p>
+                </button>
+              </div>
+            </div>
+            <div class="">
+              <h6 class="m-0 p-0">magna fringilla urna porttitor</h6>
+            </div>
+            <div style="width: 200px">
+              <p class="">We focus on ergonomics and meeting you....</p>
+            </div>
+
+            <h5
+              style="
+                font-size: 14px;
+                line-height: 20px;
+                letter-spacing: 0.2px;
+                color: #737373;
+              "
+            >
+              <i class="fas fa-arrow-down me-2"></i> 15 Sales
+            </h5>
+            <div class="d-flex">
+              <p class="me-2">$16.48</p>
               <p style="color: blue">$6.48</p>
             </div>
             <button class="btn our-products-card-content-btn">
