--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Medical Universe</title>
   </head>
   <body>
+    <!-- navigation and hero section start -->
     <section class="hero-img">
       <div class="container">
         <nav class="navbar navbar-expand-lg py-3">
@@ -96,7 +97,9 @@
         </div>
       </div>
     </section>
+    <!-- navigation and hero section  -->
 
+    <!-- impression section start -->
     <section style="padding-bottom: 100px">
       <div class="container">
         <div class="impression">
@@ -172,7 +175,9 @@
         </div>
       </div>
     </section>
+    <!-- impression section start -->
 
+    <!-- our doctors sectio start -->
     <section class="container" style="padding-bottom: 100px">
       <div class="row our-doctors g-5">
         <div class="col-md-6">
@@ -199,7 +204,9 @@
         </div>
       </div>
     </section>
+    <!-- our doctors section end -->
 
+    <!-- leading medicine section start -->
     <section
       class="container leading-medicine"
       style="margin-top: 100px; margin-bottom: 100px"
@@ -225,7 +232,9 @@
         </div>
       </div>
     </section>
+    <!-- leading medicine section end -->
 
+    <!-- our products section start -->
     <section
       class="container our-products"
       style="margin-top: 100px; margin-bottom: 100px"
@@ -446,6 +455,67 @@
         </div>
       </div>
     </section>
+    <!-- our product section end -->
+
+    <!-- our experts section start -->
+
+    <section class="container our-experts">
+      <div class="row">
+        <div class="col-md-6 p-3">
+          <div>
+            <h6>Testimonials</h6>
+            <h2 class="my-3">Our Experts</h2>
+            <p>
+              Problems trying to resolve the conflict between <br />
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 p-3"></div>
+      </div>
+
+      <div class="row g-3 mt-5">
+        <div class="col-md-6 text-center">
+          <div class="experts-info">
+            <img src="/assets/img/expert/testimonial-user-cover-1.png" alt="" />
+
+            <p>
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half"></i>
+            </div>
+            <h5>Regina Miles</h5>
+            <h6>Designer</h6>
+          </div>
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="experts-info">
+            <img src="/assets/img/expert/testimonial-user-cover-2.png" alt="" />
+            <p>
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half"></i>
+            </div>
+            <h5>Regina Miles</h5>
+            <h6>Designer</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- our experts section end -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
