--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       </div>
 
       <div class="row g-3 mt-5">
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center p-3">
           <div class="experts-info">
             <img src="/assets/img/expert/testimonial-user-cover-1.png" alt="" />
 
@@ -495,7 +495,7 @@
             <h6>Designer</h6>
           </div>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-6 text-center p-3">
           <div class="experts-info">
             <img src="/assets/img/expert/testimonial-user-cover-2.png" alt="" />
             <p>
