join us section completed with media query

--- a/index.html
+++ b/index.html
@@ -604,9 +604,25 @@
     <!-- our team section end -->
     <!-- join us section start -->
     <section
-      class="join-us"
+      class="container text-center join-us"
       style="margin-top: 100px; margin-bottom: 100px"
-    ></section>
+    >
+      <h6>Newsletter</h6>
+
+      <h2>JOIN US</h2>
+      <p>
+        Problems trying to resolve the conflict between <br />
+        the two major realms of Classical physics: Newtonian mechanics
+      </p>
+      <div class="d-flex justify-content-center align-iems-center pt-5">
+        <form action="" class="d-flex">
+          <input type="text" class="form-control" placeholder="Your Email" />
+          <button class="btn btn-primary join-us-btn" type="submit">
+            Subscribe
+          </button>
+        </form>
+      </div>
+    </section>
     <!-- join us section end -->
 
     <script
