--- a/index.html
+++ b/index.html
@@ -625,6 +625,92 @@
     </section>
     <!-- join us section end -->
 
+    <!-- footer section start -->
+    <footer class="container" style="margin-top: 100px; margin-bottom: 100px">
+      <div class="row">
+        <div class="col-md-2">
+          <div class="footer-text">
+            <h5>Company Info</h5>
+
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Carrier</a></li>
+              <li><a href="#">We are hiring</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="footer-text">
+            <h5>Legal</h5>
+
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Carrier</a></li>
+              <li><a href="#">We are hiring</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="footer-text">
+            <h5>Features</h5>
+
+            <ul>
+              <li><a href="#">Business Marketing</a></li>
+              <li><a href="#">User Analytic</a></li>
+              <li><a href="#">Live Chat</a></li>
+              <li><a href="#">Unlimited Support</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="footer-text">
+            <h5>Resources</h5>
+
+            <ul>
+              <li><a href="#">IOS & Android</a></li>
+              <li><a href="#">Watch a Demo</a></li>
+              <li><a href="#">Customers</a></li>
+              <li><a href="#">API</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="footer-text">
+            <h5>Get In Touch</h5>
+
+            <ul class="text-center">
+              <li><i class="fas fa-phone pe-2"></i>(480) 555-0103</li>
+              <li>
+                <i class="fas fa-compass pe-2"></i>4517 Washington Ave.
+                Manchester, Kentucky 39495
+              </li>
+              <li>
+                <i class="fas fa-envelope pe-2"></i>debra.holt@example.com
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="row p-5">
+          <div class="col-md-6">
+            <h6>Made With Love By Figmaland All Right Reserved</h6>
+          </div>
+          <div class="col-md-6">
+            <div class="footer-social-links">
+              <i class="fab fa-facebook me-2"></i>
+              <i class="fab fa-instagram me-2"></i>
+              <i class="fab fa-twitter"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section end -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
