footer section done with media query

--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
 
     <!-- footer section start -->
     <footer class="container" style="margin-top: 100px; margin-bottom: 100px">
-      <div class="row">
-        <div class="col-md-2">
+      <div class="row g-3">
+        <div class="col-md-2 col-sm-3">
           <div class="footer-text">
             <h5>Company Info</h5>
 
@@ -640,7 +640,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-3">
           <div class="footer-text">
             <h5>Legal</h5>
 
@@ -652,7 +652,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-3">
           <div class="footer-text">
             <h5>Features</h5>
 
@@ -664,7 +664,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-3">
           <div class="footer-text">
             <h5>Resources</h5>
 
@@ -676,7 +676,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
           <div class="footer-text">
             <h5>Get In Touch</h5>
 
@@ -694,13 +694,17 @@
         </div>
       </div>
 
-      <div>
-        <div class="row p-5">
+      <div style="background: #fafafa; margin-top: 80px">
+        <div class="row g-3 px-5">
           <div class="col-md-6">
-            <h6>Made With Love By Figmaland All Right Reserved</h6>
+            <h6
+              style="font-size: 14px; line-height: 24px; letter-spacing: 0.2px"
+            >
+              Made With Love By Figmaland All Right Reserved
+            </h6>
           </div>
-          <div class="col-md-6">
-            <div class="footer-social-links">
+          <div class="col-md-6 text-end">
+            <div class="footer-social-links pb-3">
               <i class="fab fa-facebook me-2"></i>
               <i class="fab fa-instagram me-2"></i>
               <i class="fab fa-twitter"></i>
