--- a/index.html
+++ b/index.html
@@ -70,17 +70,218 @@
                   "
                   >Login</a
                 >
-                <a
-                  href="#"
-                  class="btn btn-arrow btn-all"
-                  style="
-                    border: none;
+                <div>
+                  <a
+                    href="#"
+                    class="btn btn-arrow btn-all"
+                    data-bs-toggle="modal"
+                    data-bs-target="#staticBackdrop"
+                    style="
+                      border: none;
 
-                    background: #fc724d;
-                    color: #ffffff;
-                  "
-                  >Join Us <i class="fas fa-arrow-right mx-2"></i
-                ></a>
+                      background: #fc724d;
+                      color: #ffffff;
+                    "
+                    >Join Us <i class="fas fa-arrow-right mx-2"></i
+                  ></a>
+                  <!-- Modal -->
+
+                  <div
+                    class="modal fade"
+                    id="staticBackdrop"
+                    data-bs-backdrop="static"
+                    data-bs-keyboard="false"
+                    tabindex="-1"
+                    aria-labelledby="staticBackdropLabel"
+                    aria-hidden="true"
+                  >
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                          ></button>
+                        </div>
+                        <div class="modal-body px-5">
+                          <form class="container mb-3">
+                            <div>
+                              <label for="Employeename" class="form-label"
+                                >Employee Name</label
+                              >
+                              <div class="row g-3">
+                                <div class="col-md-6">
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="Employeename"
+                                    placeholder="First"
+                                  />
+                                </div>
+
+                                <div class="col-md-6">
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="Employeename"
+                                    placeholder="Last"
+                                  />
+                                </div>
+                              </div>
+                            </div>
+                            <div class="row g-3 mt-3">
+                              <div class="col-md-6">
+                                <label for="id-number" class="form-label"
+                                  >Id Number</label
+                                >
+                                <input
+                                  type="text"
+                                  class="form-control"
+                                  id="id-number"
+                                />
+                              </div>
+                              <div class="col-md-6">
+                                <label for="Department" class="form-label"
+                                  >Department</label
+                                >
+                                <select
+                                  class="form-select"
+                                  aria-label="Default select example"
+                                >
+                                  <option selected>Production</option>
+                                  <option value="1">One</option>
+                                  <option value="2">Two</option>
+                                  <option value="3">Three</option>
+                                </select>
+                              </div>
+                            </div>
+
+                            <div class="mt-3">
+                              <label for="supervisor" class="form-label"
+                                >Supervisor</label
+                              >
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="supervisor"
+                              />
+                            </div>
+
+                            <div class="mt-3">
+                              <div class="row g-3">
+                                <div class="col-md-6">
+                                  <label for="hours-apporved" class="form-label"
+                                    >Hours Approved</label
+                                  >
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="hours-apporved"
+                                  />
+                                </div>
+
+                                <div class="col-md-6">
+                                  <label for="date-approved" class="form-label"
+                                    >Date Approved</label
+                                  >
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="date-approved"
+                                  />
+                                </div>
+                              </div>
+                            </div>
+                            <div class="mt-3">
+                              <label for="requested-by" class="form-label"
+                                >Requested By</label
+                              >
+                              <div class="row g-3">
+                                <div class="col-md-6">
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="requested-by"
+                                    placeholder="First"
+                                  />
+                                </div>
+
+                                <div class="col-md-6">
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="requested-by"
+                                    placeholder="Last"
+                                  />
+                                </div>
+                              </div>
+                            </div>
+                            <div class="mt-3">
+                              <label for="requested-date" class="form-label"
+                                >Requested Date</label
+                              >
+                              <input
+                                type="date"
+                                class="form-control"
+                                id="requested-date"
+                              />
+                            </div>
+
+                            <div class="mt-3">
+                              <label for="approved-by" class="form-label"
+                                >Approved By</label
+                              >
+                              <div class="row g-3">
+                                <div class="col-md-6">
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="approved-by"
+                                    placeholder="First"
+                                  />
+                                </div>
+
+                                <div class="col-md-6">
+                                  <input
+                                    type="text"
+                                    class="form-control"
+                                    id="approved-by"
+                                    placeholder="Last"
+                                  />
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="mt-3">
+                              <label for="approved-date" class="form-label"
+                                >approved Date</label
+                              >
+                              <input
+                                type="date"
+                                class="form-control"
+                                id="approved-date"
+                              />
+                            </div>
+
+                            <div class="d-flex mt-4">
+                              <button
+                                class="btn btn-outline-dark me-3"
+                                type="button"
+                              >
+                                Reset
+                              </button>
+                              <button class="btn btn-dark" type="submit">
+                                Submit
+                              </button>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
