width remove from our doctor section

--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
     <!-- our doctors sectio start -->
     <section class="container" style="padding-bottom: 100px">
       <div class="row our-doctors g-5">
-        <div class="col-md-6">
-          <div style="width: 400px">
+        <div class="col-md-6 ">
+          <div>
             <hr style="border: 3px solid red; width: 80px" />
             <h2>Our Doctors Specialize in you</h2>
             <p>
